<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="10dp">

    <TableLayout
        android:id="@+id/tableLayoutConnection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/status_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circle_symbol"
                android:layout_weight="2"
                android:textColor="@color/colorAccent"
                android:textSize="20sp"/>
            <TextView
                android:id="@+id/peer_id"
                android:hint="@string/peer_id"
                android:ellipsize="middle"
                android:singleLine="true"
                android:layout_width="0dp"
                android:layout_weight="24"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>
            <TextView
                android:id="@+id/connection"
                android:hint="@string/connection"
                android:layout_width="0dp"
                android:layout_weight="24"
                android:textColor="@android:color/secondary_text_light"/>

        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/destination_address"
                android:layout_span="2"
                android:layout_width="fill_parent"
                android:hint="@string/destination_address"
                android:layout_weight="1"
                android:textColor="@android:color/secondary_text_light"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/last_received"
                android:hint="@string/last_received_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/secondary_text_light" />

            <TextView
                android:id="@+id/last_sent"
                android:hint="@string/last_sent_hint"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textColor="@android:color/secondary_text_light"/>

        </TableRow>
    </TableLayout>
</LinearLayout>
