<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.tudelft.cs4160.trustchain_android.offline.ReceiveOfflineActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="30dp"
            android:text="@string/receive_offline_explanation"
            android:textSize="20sp" />

        <Button
            android:id="@+id/start_qr_scan_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickScanQR"
            android:padding="5dp"
            android:text="@string/scan_qr_code" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include
                android:id="@+id/block_layout"
                layout="@layout/item_trustchainblock"
                android:visibility="gone" />
        </ScrollView>

        <Button
            android:id="@+id/sign_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:onClick="onClickSign"
            android:padding="5dp"
            android:text="@string/sign_and_return_block"
            android:visibility="gone" />

        <TextView
            android:id="@+id/block_signed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/block_signed"
            android:textSize="16sp"
            android:visibility="gone" />

        <Button
            android:id="@+id/return_home_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:padding="5dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/return_home"
            android:visibility="gone" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
