<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".stresstest.StressTestActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.5"
                android:labelFor="@id/nodes_to_start"
                android:text="@string/nodes_to_start"
                android:textSize="15sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_weight="0.5"
                android:text="@string/nodes_running"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nodes_to_start"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="number"
                android:text="@string/default_nodes_num" />

            <TextView
                android:id="@+id/nodes_running"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="0.5" />

        </LinearLayout>

        <Button
            android:id="@+id/start_stress_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:background="@color/colorPrimary"
            android:text="@string/button_start_nodes"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/stop_stress_test"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="30dp"
            android:background="@color/colorPrimary"
            android:text="@string/button_stop_nodes"
            android:textColor="@android:color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="@string/stats_uptime" />

            <TextView
                android:id="@+id/run_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:text="0" />
        </LinearLayout>

            <!-- Received stats -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:text="@string/stats_received_title" />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_messages_received" />

                <TextView
                    android:id="@+id/messages_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    />

                <TextView
                    android:id="@+id/bytes_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stats_punctures" />

                <TextView
                    android:id="@+id/punctures_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stats_puncture_requests" />

                <TextView
                    android:id="@+id/puncture_requests_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stats_introduction_requests" />

                <TextView
                    android:id="@+id/introduction_requests_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stats_introduction_responses" />

                <TextView
                    android:id="@+id/introduction_responses_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/stats_block_messages" />

                <TextView
                    android:id="@+id/block_messages_received"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="3" />

            </LinearLayout>

            <!-- Sent stats -->
            <TextView
                android:layout_marginTop="20dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_sent"
                />
            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/stats_messages_sent" />

                <TextView
                    android:id="@+id/messages_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />

                <TextView
                    android:id="@+id/bytes_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:text="@string/stats_punctures" />

                <TextView
                    android:id="@+id/punctures_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3" />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_introduction_requests"
                    android:layout_weight="2"
                    />

                <TextView
                    android:id="@+id/introduction_requests_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/stats_introduction_responses"
                android:layout_weight="2"
                />

            <TextView
                android:id="@+id/introduction_responses_sent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                />

        </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_puncture_requests"
                    android:layout_weight="2"
                    />

                <TextView
                    android:id="@+id/puncture_requests_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    />

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stats_block_messages"
                    android:layout_weight="2"
                    />

                <TextView
                    android:id="@+id/block_messages_sent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    />

            </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
